--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mhlongo</title>
+    <title>Refentse | Gift</title>
     <link rel="icon" href="https://i.ibb.co/zRsTj3p/Frame-1-37.png">
 
 
@@ -44,19 +44,19 @@
         </div>
         <div class="profile-text">
             <h5>Hi I'm </h5><br>
-            <h1>Mhlongo</h1><br>
+            <h1>Refentse</h1><br>
             <p>Welcome to my portfolio website! I'm a passionate and aspiring software engineer with a strong desire to create innovative solutions and push the boundaries of technology.With a deep love for coding and problem-solving, I am constantly seeking opportunities to learn and grow in this ever-evolving field</p>
             
             <div class="btn-group">
-                <a href="files/Monga.pdf" class="btn   active">Download CV</a>
-                <a href="mailto:202163030@keyaka.ul.ac.za" class="btn">Contact</a>
+                <a href="files/Selowa.pdf" class="btn   active">Download CV</a>
+                <a href="mailto:Gizzaboy969@gmail.com" class="btn">Contact</a>
             </div>
 
             <div class="social">
-                <a href="mailto:202163030@keyaka.ul.ac.za"><i class="fa fa-envelope"></i></a>
-                <a href="https://github.com/Mhlongo"><i class="fa-brands fa-github"></i></a>
-                <a href="https://leetcode.com/Mhlongo/"><i class="fa fa-code"></i></a>
-                <a href="https://www.linkedin.com/in/Mhlongo/"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="mailto:Gizzaboy969@gmail.com"><i class="fa fa-envelope"></i></a>
+                <a href="https://github.com/Refentse"><i class="fa-brands fa-github"></i></a>
+                <a href="https://leetcode.com/Refentse/"><i class="fa fa-code"></i></a>
+                <a href="https://www.linkedin.com/in/Refentse/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
     </div>
@@ -77,10 +77,10 @@
                                   
                 <div class="about-skills">
                     <ul>
-                        <li>Name:Mhlongo GI</li>
+                        <li>Name:Refentse Selowa</li>
                         <li>Age:21</li>     
                         <li>From:South Africa | Polokwane</li>
-                        <li>Email:202405581@keyaka.ul.ac.za</li>
+                        <li>Email:Gizzaboy969@gmail.com</li>
                         <li>Availabiltiy:Fulltime</li>
                         <li>Experience&lt;1yr</li>
                     </ul>
